[package]
name = "abc_409"
version = "0.1.0"
edition = "2024"

# dependencies added to new project
[dependencies]
proconio = { version = "0.5.0", features = ["derive"] }

[profile.release]
lto = true
panic = 'abort'

[[bin]]
name = "a"
path = "src/a.rs"

[[bin]]
name = "b"
path = "src/b.rs"

[[bin]]
name = "c"
path = "src/c.rs"

[[bin]]
name = "tmp"
path = "src/tmp.rs"
